# xPLHAL

./: CMakeLists.txt  ChangeLog  Doxyfile
cmake/Modules/: FindxPL.cmake
src/: CMakeLists.txt  determinator.cpp  determinator.h  determinator_manager.cpp  determinator_manager.h  determinatoritems.cpp  determinatoritems.h  devicemanager.cpp  devicemanager.h  globals.h  i_devicemanager.h  i_properties.h  i_xplcache.h  i_xplhandler.h  log.cpp  log.h  main.cpp  pugiconfig.hpp  recurring_timer.cpp  recurring_timer.h  response_codes.h  xhcp.cpp  xhcp.h  xhcpthread.cpp  xhcpthread.h  xplcache.cpp  xplcache.h  xpldevice.h  xplhandler.cpp  xplhandler.h  xplmessage.cpp  xplmessage.h  xplmessagequeue.cpp  xplmessagequeue.h
src/actions/: delayAction.cpp  delayAction.h  execRuleAction.cpp  execRuleAction.h  executeAction.cpp  executeAction.h  globalAction.cpp  globalAction.h  logAction.cpp  logAction.h  runScriptAction.cpp  runScriptAction.h  stopAction.cpp  stopAction.h  suspendAction.cpp  suspendAction.h  xplAction.cpp  xplAction.h
src/conditions/: dayCondition.cpp  dayCondition.h  globalChanged.cpp  globalChanged.h  globalCondition.cpp  globalCondition.h  timeCondition.cpp  timeCondition.h  xplCondition.cpp  xplCondition.h
test/: CMakeLists.txt  determinator1.xml  determinator2.xml  determinatorAll.xml  determinatorDesc.xml  mock_xplhandler.h  pugi.h  test_determinator.cpp  test_determinator_manager.cpp  test_devicemanager.cpp  test_test.cpp
